# backend/internal/models/media.go
@@ -4,8 +4,10 @@ import "gorm.io/gorm"
 
 type MediaItem struct {
 	gorm.Model
-	Filename string `gorm:"not null"`
-	MimeType string `gorm:"not null"`
-	Size     int64  `gorm:"not null"`
-	FilePath string `gorm:"not null"`
+	Filename  string `gorm:"not null"`
+	MimeType  string `gorm:"not null"`
+	Size      int64  `gorm:"not null"`
+	FilePath  string `gorm:"not null"`
+	ThumbPath string
+	Alt       string
 }
